modified:   notes/240603.md 	modified:   notes/240603.pdf 	new file:   notes/240605.md

--- a/notes/240603.md
+++ b/notes/240603.md
@@ -1,4 +1,4 @@
-## gaussian_renderer directory and GaussianRasterizer class
+## `gaussian_renderer` directory and `GaussianRasterizer` class
 - ./gaussian_renderer/
 - render() method
 ```python
@@ -51,6 +51,7 @@ def render(viewpoint_camera, pc : GaussianModel, pipe, bg_color : torch.Tensor, 
 - viewpoint_camera: the rendered image will be based on the viewpoint_camera
 - pc (point cloud): 3D gaussian points that will be **splatted** on to the viewpoint camera plane
 - pipe: pipe is create as the training starts. The pipe contains attributes to determine whether certain operation should be performed at certain place, e.g.,:
+    - can be understood as: the training / rendering process can be seen as a pipeline, there are many components (procedure) in the pipeline, some of the components are customizable components, `pipe` is used to control the whether certain costomizable component should be included in the training rendering process
     ```python
     # whether need to precompute 3D convariance
     if pipe.compute_cov3D_python:
@@ -251,6 +252,26 @@ diff-gaussian-rasterization/
 - backward process (backward.cu & backward.h): 
     - computing gradient for minimizing loss
     - optimize the parameters
+- main rasterization method included in `forward.cu`
+    - computeColorFromSH(): converting the input spherical harmonics
+    - computeCov2D(): 2D covariance matrix computation
+    - computeCov3D(): converting scale and rotation properties of each Gaussian to a 3D covariance matrix in world space.
+    - preprocessCUDA(): perform preprocessing before rendering / rasterization
+        1. exclude point outside frustum
+        2. transform point by projecting
+        3. obtaining 3D covariance from precomputed variable or computeCov3D() from scaling and rotation parameters
+        4. compute 2D screen-space covariance matrix
+        5. compute conic matrix using 2D covariance 
+        6. use getRect() from auxiliary.h to compute bounding rectangle
+        7. find overlapping tiles on screen space using rectangle
+    - renderCUDA()
+        1. render one tile per block, and each thread treats one pixel
+        2. compute alpha 
+        3. compute value for each pixel
+        4. valid pixel write out their final rendering data to the frame and auxiliary buffers
+        5. obtain rendered image
+    - preprocess(): CUDA kernel launcher for preprocessCUDA()
+    - render(): CUDA kernel launcher for renderCUDA()
 
 # EWA Splatting
 ## Abstract 
