new file:   DL_metrics.py 	new file:   DL_render.py 	modified:   notes/240625.md 	modified:   notes/240626.md 	new file:   notes/240627.md 	new file:   notes/240703.md 	new file:   notes/240708.md 	new file:   notes/240714.md 	new file:   notes/240714.pdf 	new file:   notes/240715.md 	new file:   notes/240717.md 	new file:   notes/240717_updated.pdf 	new file:   notes/240719.md 	new file:   notes/240721.md 	modified:   notes/intro.md 	modified:   scene/gaussian_model.py 	new file:   sparse_dict_learning/sdl_demo.py 	new file:   utils/random_choice.py

--- a/notes/240626.md
+++ b/notes/240626.md
@@ -16,6 +16,16 @@
 # Discussion
 ## New Loss Function
 ## Sparse Matrix Reconstrcution
+- Sparse dictionary learning aims to find a dictionary (a set of basis vectors) such that each data point in the dataset can be represented as a sparse linear combination of these basis vectors. This means that for each data point, only a few basis vectors (from the dictionary) are needed to reconstruct it.
+- Problem setup:
+    - Number of Gaussian Points: n
+    - Dimension of Each Gaussian Points: 59 (xyz, opacity, SH, ...)
+    - Apply sparse reconstruction: 
+        - Number of Gaussian Points: n
+        - Dimension of sparse matrix: 30000 (10 valid entries + 10 indices for valid entries)
+        - Dimension of dictionary: 59 atoms
+        - n\*30000 + 30000\*59
+
 ## Removal of Outliers
 ## Reason for Blurring
 - too sparse
