modified:   notes/240813.md 	new file:   notes/240814.md 	new file:   notes/240816.md

--- a/notes/240813.md
+++ b/notes/240813.md
@@ -37,6 +37,14 @@
     - training psnr: 27.808860778808594
     - time: [13/08 15:28:30] - [13/08 15:51:23]
     - memory: 559.83MB
+- truck: 
+    - iterations: 20000
+    - interval: 500
+    - merge number each time: 25000
+    - number of gaussian after merge: 2367026
+    - testing psnr: 25.27420735359192
+    - training psnr: 26.827076339721682
+    - memory: 
 - playroom:
     - iterations: 20000
     - number of gaussian after merge: 2138742
@@ -46,7 +54,19 @@
     - memory: 505.84MB
 - drjohnson:
     - iterations: 20000
-    - number of gaussian after merge: 
-    - testing psnr: 
-    - training psnr: 
-    - time : [13/08 16:34:45] - 
+    - number of gaussian after merge: 3075410
+    - testing psnr: 28.898049036661785
+    - training psnr: 36.26775894165039
+    - time : [13/08 16:34:45] - [13/08 17:07:06]
+
+## Truck Dataset
+| Run | *Iterations* | *Merge Inteval* | *Merge Points Number* | *Testing PSNR*  |  *Final Points* | *Final Memory* | *Portion* |
+|-|---------|-------------|-------------|---------|--------|--------|-------------|
+| Original | 30000    | N.A.        | N.A.        | 25.38   | 2566521        | 607.01MB        | 1.00     |
+|1| 20000    | 500         | 10000        | 25.41   |   2168800        | 512.95MB      | 0.85       |
+|2| 20000    | 1000         | 25000       | 25.45   |  2073825        | 490.48MB       | 0.81       |
+|3| 30000    | 500         | 25000        | 24.88   |  1095959        | 259.21MB         | 0.43       |
+|4| 30000    | 500         | 10000       | 25.58   |   1970121        | 465.96MB       | 0.77       |
+|5| 30000   | 1000         | 25000        | 25.48   |   1827981        | 432.34MB       | 0.71       |
+|6| 20000 | 500 | 5000 | 25.50 | 2367026 | 559.83MB |0.92 |
+|7| 20000 | 500 | 25000 | 25.27 | 1582909 |374.38MB |0.62 |
