modified:   notes/240926.md 	new file:   notes/240927.md 	new file:   notes/240928.md 	new file:   notes/240929.md 	new file:   notes/240930.md 	new file:   notes/241001.md 	new file:   notes/241004.md 	new file:   notes/241006.md 	new file:   notes/241008.md 	new file:   notes/241010.md 	new file:   notes/241011.md 	new file:   notes/241012.md 	new file:   notes/241013.md 	new file:   notes/241016.md 	new file:   notes/241018.md 	new file:   notes/241019.md 	new file:   notes/241021.md 	new file:   notes/241022.md 	new file:   notes/241023.md 	new file:   notes/Screenshot 2024-10-04 161752.png 	new file:   notes/aliasing.png 	new file:   notes/bonsai_metrics_1022.png 	new file:   notes/depth_normal.png 	new file:   notes/games.png 	new file:   notes/garden_metrics.png 	new file:   notes/general.png 	new file:   notes/jacob.png 	new file:   notes/kitchen_metrics.png 	new file:   notes/normal_prior.png 	new file:   notes/room_metrics_1022.png 	new file:   notes/surfels.png 	new file:   notes/take_away.png

--- a/notes/240926.md
+++ b/notes/240926.md
@@ -1,2 +1,53 @@
 # GAMES Webinar 2024 – 341期(高斯泼溅建模与渲染的前沿进展) | 陈安沛(图宾根大学和苏黎世联邦理工院)，戴品炫(浙江大学)
 # GAMES: Graphics And Mixed Environment Symposium
+## Rendering, Geometry, and Generalization
+- 3D world: how to represent 3D
+- 2D display
+- bridge
+- application: robotics, AR / VR, VTX
+### 1. Rendering: Mip-Splatting
+- 3dgs more precise than NeRF
+- viewer for 3dgs
+- strong aliasing artifacts when zoom-in or zoom-out
+- aliasing happens when a continuous signal is sampled at a rate that is too low
+- dilation: enlarge the pixel
+- needle-shape
+- solution: 
+    - 3D smoothing filter: reduce the needle-shape artifacts
+    - 2D Mip Filter: apply normalization to Gaussian
+### 2. Geometry: 2DGS for geometrically accurate RF
+- overlapping in gaussians
+- huge variance between different camera points
+- inaccurate projection (approximation): perspective distortion
+- solution:
+    - surfels representation
+    - ray-splat intersect: is not projection
+    - regularization terms: regularize the intersection
+- smoother surface
+### 3. Generalization: LaRa
+- 4 views for 360 degree
+- goal: to make large-baseline reconstruction
+- supports both single image and text inputs:
+    - reasoning + video + mesh < 2 secs
+- MVSNeRF
+- Transformer: too expensive
+- RF prediction
+### Ads
+- inception 3D Lab
+- Lab Vision - Towards a 3D intelligent
+- Gen AI, Efficiency, Motion, and Simulation
+- Westlake University
+## Gaussians Surfels
+- geometry surface
+- scene understanding, education, games, 3D video
+- NeuS: slow, over-smoothing
+- 3DGS: efficient & expressive, poor geometry
+- Gaussian Surfels: improve geometry
+- 3DGS -> flatten -> surfels (surface elements)
+- 3DGS: eliminating geometric ambiguity
+    - use gaussian center to approximate
+- depth-normal consistency
+- 3DGS: very local, in some highlight areas -> densification -> poor geometry
+- normal prior
+- volumetric cutting: remove erronuous depth around edges
+- BlendedMVS Dataset: on github
