modified:   notes/241021.md 	modified:   notes/241022.md 	modified:   notes/241023.md 	new file:   notes/241024.md 	new file:   notes/241026.md 	new file:   notes/241028.md 	new file:   notes/241029.md 	new file:   notes/241030.md 	new file:   notes/241101.md 	new file:   notes/241102.md 	new file:   notes/241103.md 	new file:   notes/241104.md

--- a/notes/241023.md
+++ b/notes/241023.md
@@ -67,10 +67,41 @@ tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output
 | truck | 8.53e+5 | 8.41e+6 |
 | bicycle | 1.01e+6 | 9.38e+6 |
 | bonsai | 6.63e+5 | 6.71e+5 | 
-| counter | 4.64e+5 |4.56e+5 |
-| drjohnson | 6.1e+5 |**4.48e+5**  |
+| counter | 4.64e+5 | 4.56e+5 |
+| drjohnson | 6.1e+5 | **4.48e+5**  |
 | garden | 1.77e+6 | 1.74e+6 | 
 | kitchen | 6.12e+5 | 6.05e+5  | 
 | playroom | 5.11e+5 | **3.18e+5** | 
 | room | 4.76e+5 | **3.97e+5** |
 | stump | 4.47e+5 | 4.43e+5 |
+
+# c3dgs results on our machine
+## PSNR
+| dataset | PNSR | Gassian Points Number |
+|---------|---------|---------|
+| train | 21.68 | 711041 |
+| truck | 25.10 | 956950 |
+| bicycle | 24.78 | 2254028 |
+| bonsai | 32.13 | 594431 |
+| counter | 28.69 | 525187  |
+| drjohnson | 29.33 | 1337661 |
+| garden | 26.74 | 2332231 |
+| kitchen | 30.62 | 1128896  |
+| playroom | 30.38 |  760663 |
+| room | 30.88 | 510183 |
+| stump | 26.38 | 1611215 |
+
+## Command 
+```sh
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/bicycle/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/bonsai/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/counter/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/drjohnson/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/garden/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/kitchen/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/playroom/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/room/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/stump/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/train/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+tensorboard --logdir=/mnt/hdd4T/www_home/project/learn/gaussian-splatting/output/merge_debug/truck/1022_with_fps_ITER_10000_DI_500_OI_2000_MI_500_MPN_1000 
+```
