--- a/notes/241104.md
+++ b/notes/241104.md
@@ -1,8 +1,55 @@
 # TODO
-1. implement 3dgs comparison
+1. implement 3dgs comparison [DONE]
     - use SH coefficient
+    - *final refers to the metrics in the iterations of 120k*
+## original results
+| dataset | psnr | gauss # |
+|---------|---------|---------|
+| train | 22.01 | 1.08e+6 | 
+| truck | 25.4 | 2.59e+6 |
+## merge results
+| dataset | best psnr | gauss # with best psnr | final psnr | final gauss # |
+|---------|---------|---------|---------|---------|
+| train | 22.42 | 5.91e+5 | 21.66 | 2.38e+5 |
+| truck | 22.42 | 5.91e+5 | 21.66 | 2.38e+5 |
 2. implement c3dgs comparison
     - train and load corresponding attributes from c3dgs
 3. implement lightgs comparison
 4. register CVPR account
 5. discuss related works categories
+
+# possible bugs
+```sh
+[ITER 120000] Evaluating train: L1 0.03447580821812153 PSNR 25.30000877380371
+
+
+Start Stage 1: Pre-Merge (1000 iterations, 95306 merge points)
+
+
+Start merging...
+Number of Gaussians before merging: 238265
+
+End of Pre-Merge
+
+
+Start Stage 2: Merge (5000 iterations, 17442 merge points)
+
+
+Start merging...
+Number of Gaussians before merging: 238265
+Traceback (most recent call last):
+  File "merge.py", line 453, in <module>
+    args.checkpoint_iterations, args.start_checkpoint, args.debug_from, args.merge_interval, args.percent_merge, args.percent_pre_merge)
+  File "merge.py", line 243, in training
+    final_merge(gaussians)
+  File "/mnt/hdd4T/www_home/project/learn/original_3dgs/gaussian-splatting/utils/merge_utils.py", line 324, in final_merge
+    del gaussians.optimizer.state[stored_state]
+KeyError: Parameter containing:
+tensor([[0.4129, 0.5877],
+        [0.4895, 0.4911],
+        [0.5355, 0.4241],
+        ...,
+        [0.5074, 0.5191],
+        [0.5495, 0.4608],
+        [0.4931, 0.5225]], device='cuda:0', requires_grad=True)
+```
